Cleanup findbugs warnings